# SPH_Simulator

./: .gitignore  .travis.yml  Meeting Minutes.ipynb  README.md  Technical_Report.ipynb  Technical_Report_Layout.ipynb  animate_results.py  examples.py  initial_grid.py  pc_method.py  requirements.txt  setup.cfg  setup.py  sph_ap.py  sph_demo.ipynb  sph_fe.py  sph_ie.py  sph_stub.py  sph_stub_doc.py  system_test.py  task5.py  task7.py  test.csv  test_config.pkl  test_dummy.py  test_physical.py  test_richard.py  test_task5.py  test_unit.py  tox.ini
old/: sph_ie.py
raw_data/: 2018-12-11-13hr-45m.csv  2018-12-11-13hr-56m.csv  2018-12-11-13hr-56m_config.pkl
results/: animation_test.csv
sph/: analyse_results.py  config.py  functions.py  samples.py  solve.py  sph.py  sph_ap.py  sph_fe.py  sph_ie.py  utils.py
sph/objects/: __init__.py  grid.py  particle.py  random.py  system.py
src/sph/: __init__.py
tests/: conftest.py  test_physical.py  test_unit.py  to_travis.csv  to_travis_config.pkl
tests/objects/: test_grid.py  test_particle.py  test_random.py  test_system.py
