[metadata]
name = sph
description = smooth particle hydrodynamics simulator
long_description = file: README.md, LICENSE.txt
license = MIT License
classifiers =
    Programming Language :: Python :: 3.8


[options]
include_package_data = True
packages = find:
install_requires =
    numpy>=1.15.4, < 2
    scipy>=1.1.0, < 2
    matplotlib>=3.0.2, < 4
    mpltools>=0.2.0, < 1
    sympy>=1.3, < 2
    pandas>=0.23.4, < 1


[options.extras_require]
test = tox
demo = jupyterlab


[flake8]
application_import_names = esg_tpd_mapping, tests
import-order-style = google
max-line-length = 100
ignore =
  W504, # line break after binary operator


[pylint]
max-line-length = 100
disable =
  W0511,  # allow TODO items


[mypy]
ignore_missing_imports = True


[tool:pytest]
addopts =
#  --cov-report term-missing
  -vv
#  --cov-branch
  --color=yes
  ; --cov-fail-under 80
  -p no:warnings
  # TODO remove me

[coverage:run]
branch = true
parallel = true


[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    __version__: str
