[metadata]
name = sph_simulator
description = Smooth Particle Hydrodynamic Similar
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
python_requires = >=3.8
include_package_data = True

[options.extras_require]
testing =
    pytest
    pytest-cov

[coverage:report]
show_missing = true
fail_under = 80
exclude_lines =
    pragma: no cover

[coverage:run]
omit =
    **/__init__.py
    src/sph/version.py
source =
    src/sph/

[flake8]
application_import_names =
    sph
    tests
max-line-length = 100
import-order-style = pycharm
extend-ignore =
exclude =
    /fixtures/*,
    venv/
per-file-ignores =
    **/__init__.py: F401,D104
    **/__main__.py: F401

[pylint.MASTER]
ignore-patterns =
    __init__.py,
    version.py,

[pylint.MESSAGES CONTROL]
disable =
    W0511,  # TODO

[pylint.REPORTS]
output-format = colorized
reports = no
include-ids = yes
msg-template = '{msg_id} {path}:{line:3d} {obj} - {msg}'

[mypy]
ignore_missing_imports = true
exclude =
